# deploying-mlflow-model-to-k8s

./: .gitignore  Dockerfile  README.md  inferenceservice.yaml  pyproject.toml  test-input.json
src/: train_model.py
