[project]
name = "dummy-regressor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
mlflow = "^2.20.3"
scipy = "1.13.1"
scikit-learn = "^1.6.1"
databricks-sdk = "^0.45.0"
virtualenv = "^20.29.3"
mlserver = "^1.6.1"
mlserver-mlflow = "^1.6.1"
